--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   phpcs:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -26,4 +28,4 @@ jobs:
           php phpcs.phar --version
 
       - name: Detect coding standard violations
-        run: php phpcs.phar --standard=$GITHUB_WORKSPACE/phpcs.xml --colors -n $GITHUB_WORKSPACE --ignore=libs/
+        run: php phpcs.phar --standard=$GITHUB_WORKSPACE/.github/lint/phpcs.xml --colors -n $GITHUB_WORKSPACE --ignore=libs/
