--- a/.github/workflows/test-database-update.yml
+++ b/.github/workflows/test-database-update.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   test-database-update:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - name: Checkout
         uses: actions/checkout@v4
