--- a/.github/workflows/test-ansible-role.yml
+++ b/.github/workflows/test-ansible-role.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   ansible:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - name: Checkout
         uses: actions/checkout@v4
