--- a/docker/config/nginx/repomanager.conf
+++ b/docker/config/nginx/repomanager.conf
@@ -16,6 +16,13 @@ server {
     set $WWW_DIR '/var/www/repomanager';        # default is /var/www/repomanager
     set $REPOS_DIR '/home/repo';                # default is /home/repo
     set $WEBSOCKET_LISTEN_PORT 8081;            # default is 8081
+    set $fastcgi_https off;
+
+    # The client must set 'X-Forwarded-Proto' header to "https" (or $scheme must be "https") when behind a reverse proxy with HTTPS
+    # This will ensure cookies are set with Secure attribute
+    if ($http_x_forwarded_proto = "https") {
+        set $fastcgi_https on;
+    }
 
     listen 8080;
     server_name 127.0.0.1;
@@ -83,7 +90,8 @@ server {
     location /api/v2/ {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $WWW_DIR/public/api/v2/index.php;
-        # fastcgi_param HTTPS on;
+        # Tell php-fpm if the client connection is HTTPS or not (for setting cookies with Secure attribute)
+        # fastcgi_param HTTPS $fastcgi_https;
         # Avoid sending the security headers twice
         fastcgi_param modHeadersAvailable true;
         fastcgi_pass php-handler;
@@ -95,8 +103,8 @@ server {
         root $WWW_DIR/public;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $request_filename;
-        #include fastcgi.conf;
-        fastcgi_param HTTPS on;
+        # Tell php-fpm if the client connection is HTTPS or not (for setting cookies with Secure attribute)
+        fastcgi_param HTTPS $fastcgi_https;
         # Avoid sending the security headers twice
         fastcgi_param modHeadersAvailable true;
         fastcgi_pass php-handler;
