--- a/www/templates/source-repositories/rpm/rockylinux.yml
+++ b/www/templates/source-repositories/rpm/rockylinux.yml
@@ -8,10 +8,16 @@ repositories:
     description: Rocky Linux BaseOS
     url: https://download.rockylinux.org/pub/rocky/$releasever/BaseOS/$basearch/os
     releasever:
+      - name: 10
+        description: Rocky Linux 10
+        gpgkeys:
+          - link: https://download.rockylinux.org/pub/rocky/RPM-GPG-KEY-Rocky-10
+ 
       - name: 9
         description: Rocky Linux 9
         gpgkeys:
           - link: https://download.rockylinux.org/pub/rocky/RPM-GPG-KEY-Rocky-9
+
       - name: 8
         description: Rocky Linux 8
         gpgkeys:
@@ -23,10 +29,16 @@ repositories:
     description: Rocky Linux AppStream
     url: https://download.rockylinux.org/pub/rocky/$releasever/AppStream/$basearch/os
     releasever:
+      - name: 10
+        description: Rocky Linux 10
+        gpgkeys:
+          - link: https://download.rockylinux.org/pub/rocky/RPM-GPG-KEY-Rocky-10
+
       - name: 9
         description: Rocky Linux 9
         gpgkeys:
           - link: https://download.rockylinux.org/pub/rocky/RPM-GPG-KEY-Rocky-9
+
       - name: 8
         description: Rocky Linux 8
         gpgkeys:
@@ -38,6 +50,11 @@ repositories:
     description: Rocky Linux Extras
     url: https://download.rockylinux.org/pub/rocky/$releasever/extras/$basearch/os
     releasever:
+      - name: 10
+        description: Rocky Linux 10
+        gpgkeys:
+          - link: https://download.rockylinux.org/pub/rocky/RPM-GPG-KEY-Rocky-10
+
       - name: 9
         description: Rocky Linux 9
         gpgkeys:
@@ -54,10 +71,16 @@ repositories:
     description: Rocky Linux Plus
     url: https://download.rockylinux.org/pub/rocky/$releasever/plus/$basearch/os
     releasever:
+      - name: 10
+        description: Rocky Linux 10
+        gpgkeys:
+          - link: https://download.rockylinux.org/pub/rocky/RPM-GPG-KEY-Rocky-10
+
       - name: 9
         description: Rocky Linux 9
         gpgkeys:
           - link: https://download.rockylinux.org/pub/rocky/RPM-GPG-KEY-Rocky-9
+
       - name: 8
         description: Rocky Linux 8
         gpgkeys:
@@ -69,10 +92,16 @@ repositories:
     description: Rocky Linux Devel
     url: https://download.rockylinux.org/pub/rocky/$releasever/devel/$basearch/os
     releasever:
+      - name: 10
+        description: Rocky Linux 10
+        gpgkeys:
+          - link: https://download.rockylinux.org/pub/rocky/RPM-GPG-KEY-Rocky-10
+
       - name: 9
         description: Rocky Linux 9
         gpgkeys:
           - link: https://download.rockylinux.org/pub/rocky/RPM-GPG-KEY-Rocky-9
+
       - name: 8
         description: Rocky Linux 8
         gpgkeys:
@@ -95,6 +124,11 @@ repositories:
     description: Rocky Linux CRB
     url: https://download.rockylinux.org/pub/rocky/$releasever/CRB/$basearch/os
     releasever:
+      - name: 10
+        description: Rocky Linux 10
+        gpgkeys:
+          - link: https://download.rockylinux.org/pub/rocky/RPM-GPG-KEY-Rocky-10
+
       - name: 9
         description: Rocky Linux 9
         gpgkeys:
