--- a/www/templates/source-repositories/rpm/rockylinux-vault.yml
+++ b/www/templates/source-repositories/rpm/rockylinux-vault.yml
@@ -8,10 +8,15 @@ repositories:
     description: Rocky Linux BaseOS
     url: https://dl.rockylinux.org/vault/rocky/$releasever/BaseOS/$basearch/os
     releasever:
-      # Not accessible yet
-      # - name: 9.5
-      #   description: Rocky Linux 9.5
-      #   gpgkeys:
+      - name: 9.6
+        description: Rocky Linux 9.6
+        gpgkeys:
+          - link: https://download.rockylinux.org/pub/rocky/RPM-GPG-KEY-Rocky-9
+
+      - name: 9.5
+        description: Rocky Linux 9.5
+        gpgkeys:
+          - link: https://download.rockylinux.org/pub/rocky/RPM-GPG-KEY-Rocky-9
 
       - name: 9.4
         description: Rocky Linux 9.4
@@ -79,10 +84,15 @@ repositories:
     description: Rocky Linux AppStream
     url: https://dl.rockylinux.org/vault/rocky/$releasever/AppStream/$basearch/os
     releasever:
-      # Not accessible yet
-      # - name: 9.5
-      #   description: Rocky Linux 9.5
-      #   gpgkeys:
+      - name: 9.6
+        description: Rocky Linux 9.6
+        gpgkeys:
+          - link: https://download.rockylinux.org/pub/rocky/RPM-GPG-KEY-Rocky-9
+
+      - name: 9.5
+        description: Rocky Linux 9.5
+        gpgkeys:
+          - link: https://download.rockylinux.org/pub/rocky/RPM-GPG-KEY-Rocky-9
 
       - name: 9.4
         description: Rocky Linux 9.4
@@ -150,10 +160,15 @@ repositories:
     description: Rocky Linux Extras
     url: https://dl.rockylinux.org/vault/rocky/$releasever/extras/$basearch/os
     releasever:
-      # Not accessible yet
-      # - name: 9.5
-      #   description: Rocky Linux 9.5
-      #   gpgkeys:
+      - name: 9.6
+        description: Rocky Linux 9.6
+        gpgkeys:
+          - link: https://download.rockylinux.org/pub/rocky/RPM-GPG-KEY-Rocky-9
+
+      - name: 9.5
+        description: Rocky Linux 9.5
+        gpgkeys:
+          - link: https://download.rockylinux.org/pub/rocky/RPM-GPG-KEY-Rocky-9
 
       - name: 9.4
         description: Rocky Linux 9.4
@@ -222,10 +237,15 @@ repositories:
     description: Rocky Linux Plus
     url: https://dl.rockylinux.org/vault/rocky/$releasever/plus/$basearch/os
     releasever:
-      # Not accessible yet
-      # - name: 9.5
-      #   description: Rocky Linux 9.5
-      #   gpgkeys:
+      - name: 9.6
+        description: Rocky Linux 9.6
+        gpgkeys:
+          - link: https://download.rockylinux.org/pub/rocky/RPM-GPG-KEY-Rocky-9
+
+      - name: 9.5
+        description: Rocky Linux 9.5
+        gpgkeys:
+          - link: https://download.rockylinux.org/pub/rocky/RPM-GPG-KEY-Rocky-9
 
       - name: 9.4
         description: Rocky Linux 9.4
@@ -288,10 +308,15 @@ repositories:
     description: Rocky Linux Devel
     url: https://dl.rockylinux.org/vault/rocky/$releasever/devel/$basearch/os
     releasever:
-      # Not accessible yet
-      # - name: 9.5
-      #   description: Rocky Linux 9.5
-      #   gpgkeys:
+      - name: 9.6
+        description: Rocky Linux 9.6
+        gpgkeys:
+          - link: https://download.rockylinux.org/pub/rocky/RPM-GPG-KEY-Rocky-9
+        
+      - name: 9.5
+        description: Rocky Linux 9.5
+        gpgkeys:
+          - link: https://download.rockylinux.org/pub/rocky/RPM-GPG-KEY-Rocky-9
 
       - name: 9.4
         description: Rocky Linux 9.4
@@ -395,10 +420,15 @@ repositories:
     description: Rocky Linux CRB
     url: https://dl.rockylinux.org/vault/rocky/$releasever/CRB/$basearch/os
     releasever:
-      # Not accessible yet
-      # - name: 9.5
-      #   description: Rocky Linux 9.5
-      #   gpgkeys:
+      - name: 9.6
+        description: Rocky Linux 9.6
+        gpgkeys:
+          - link: https://download.rockylinux.org/pub/rocky/RPM-GPG-KEY-Rocky-9
+
+      - name: 9.5
+        description: Rocky Linux 9.5
+        gpgkeys:
+          - link: https://download.rockylinux.org/pub/rocky/RPM-GPG-KEY-Rocky-9
 
       - name: 9.4
         description: Rocky Linux 9.4
