--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,6 +12,8 @@ ARG DATA_DIR="/var/lib/repomanager"
 ARG REPOS_DIR="/home/repo"
 ARG DEBIAN_FRONTEND=noninteractive
 ARG branch=main
+# Export branch as environment variable for /init script
+ENV BRANCH=${branch}
 
 # PACKAGES INSTALL
 
@@ -72,6 +74,7 @@ RUN chown -R www-data:repomanager $WWW_DIR $DATA_DIR $REPOS_DIR
 
 # Some basic configurations
 RUN sed -i 's/# alias ll=/alias ll=/g' /root/.bashrc
+RUN echo "alias repomanager-execute=\"su -s /bin/bash -c '/usr/bin/php /var/www/repomanager/tasks/execute.php' www-data\"" >> /root/.bashrc
 RUN echo "set ic" > /root/.vimrc
 RUN echo "set mouse-=a" >> /root/.vimrc
 RUN echo "syntax on" >> /root/.vimrc
